--- a/style.css
+++ b/style.css
@@ -1,31 +1,34 @@
 :root {
---blue-color: #2997FF;
---divider: #ECECEC;
---text-grey: #8F8F8F;
---text-black: #303030;
---text-primary: #131113;
---bg-grey:  rgba(218, 218, 218, 0.35);
---header-height: 4rem;
+  --blue-color: #2997ff;
+  --divider: #ececec;
+  --text-grey: #8f8f8f;
+  --text-black: #303030;
+  --text-primary: #131113;
+  --bg-grey: rgba(218, 218, 218, 0.35);
+  --header-height: 4rem;
 }
-*, :after, :before {
+*,
+:after,
+:before {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-html,body {
+html,
+body {
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 body {
   height: 100vh;
-  background-color: #DADADA;
+  background-color: #dadada;
 }
 ::-webkit-scrollbar {
   width: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(125,125,125,0.5);
+  background-color: rgba(125, 125, 125, 0.5);
   border-radius: 999rem;
   outline: none;
 }
@@ -41,13 +44,13 @@ body {
 }
 .price {
   font-weight: 700;
-  font-size: .875rem;
-  color: var(--text-primary)
+  font-size: 0.875rem;
+  color: var(--text-primary);
 }
 .quantity {
   display: flex;
   min-width: 6.125rem;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   position: absolute;
@@ -61,8 +64,8 @@ body {
   font-weight: 500;
   font-size: 1.2rem;
   cursor: pointer;
-  padding:.3rem 0; 
-  transition: .2s ease-in;
+  padding: 0.3rem 0;
+  transition: 0.2s ease-in;
   border-radius: 8px;
 }
 .quantity button:hover {
@@ -75,20 +78,19 @@ body {
   text-align: center;
   font-size: 1rem;
   color: var(--text-primary);
-  padding:.5rem 0;
+  padding: 0.5rem 0;
 }
 .main-btn {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  padding:1rem .6rem;
-  border:none;
+  padding: 1rem 0.6rem;
+  border: none;
   border-radius: 12px;
-  color:white;
+  color: white;
   background-color: var(--blue-color);
   font-weight: 700;
-  font-size: .875rem;
-  
+  font-size: 0.875rem;
 }
 .main-btn span:first-child {
   opacity: 0;
@@ -101,16 +103,16 @@ body {
   margin: 0 auto;
 }
 
-.header{
-  box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.15);
+.header {
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   height: var(--header-height);
   position: sticky;
-  top:0;
+  top: 0;
   background-color: white;
   z-index: 999999999;
 }
 .header h1 {
-  color:  var(--text-primary);
+  color: var(--text-primary);
   display: flex;
   align-items: center;
   gap: 2.2rem;
@@ -123,18 +125,18 @@ body {
 }
 .content {
   height: calc(100vh - var(--header-height));
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   font-size: 30px;
 }
 .restaurant {
   background-color: white;
   padding: 1.25rem 1rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 .restaurant__location {
-  font-size: .875rem;
+  font-size: 0.875rem;
   color: var(--text-grey);
-  margin-top: .75rem;
+  margin-top: 0.75rem;
 }
 .order {
   background-color: white;
@@ -143,14 +145,14 @@ body {
   padding: 1rem 1rem 0 1rem;
 }
 .order__title {
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 .order__product {
-  border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
   display: flex;
   justify-content: space-between;
-  padding-bottom: .85rem;
-  padding-top: .75rem;
+  padding-bottom: 0.85rem;
+  padding-top: 0.75rem;
 }
 .order__product-content {
   position: relative;
@@ -160,13 +162,76 @@ body {
   border-radius: 8px;
 }
 .order__product-name {
-  font-size: .875rem;
+  font-size: 0.875rem;
   color: var(--text-black);
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
+}
+.order__product-quantity {
+  font-size: 0.875rem;
+  color: #8f8f8f;
+  margin-bottom: 0.5rem;
+}
+
+.menu {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 1rem 0 1rem;
+  height: 52px;
+}
+
+.menu__product {
+  border-bottom: 1px solid #ececec;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 0.85rem;
+  padding-top: 0.75rem;
+}
+.menu__product-content {
+  position: relative;
+}
+.menu__product img {
+  max-width: 6.125rem;
+  border-radius: 8px;
+}
+.menu__product-name {
+  font-size: 0.875rem;
+  color: var(--text-black);
+  margin-bottom: 0.5rem;
+}
+.menu__product-quantity {
+  font-size: 0.875rem;
+  color: #8f8f8f;
+  margin-bottom: 0.5rem;
+}
+
+.food__type {
+  padding: 0px 5px 0 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.food__type-name {
+  font-size: 14px;
+  color: #8f8f8f;
+}
+.food__type-img {
+  font-size: 14px;
+  opacity: 30%;
+}
+.food__type-selected {
+  background: rgba(218, 218, 218, 0.35);
+  border-radius: 40px;
+  width: 91px;
+  height: 36px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 .total {
   background-color: white;
-  padding:1rem 1rem 1.25rem 1rem;
+  padding: 1rem 1rem 1.25rem 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -180,15 +245,15 @@ body {
   display: flex;
   gap: 1rem;
   align-items: center;
-  padding: 1.125rem 1rem ;
-  border-bottom: 1px solid #DADADA;
+  padding: 1.125rem 1rem;
+  border-bottom: 1px solid #dadada;
 }
 .spot img {
   max-width: 5.625rem;
 }
 .location {
-  font-size: .875rem;
+  font-size: 0.875rem;
   color: var(--text-primary);
   line-height: 1rem;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
